--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "node-sass": "^9.0.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
