--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch-css": "nodemon -e scss -x \"npm run build-css\""
   },
   "dependencies": {
+    "@splidejs/splide": "^4.1.4",
     "node-sass": "^9.0.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
