--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "saas": "^1.0.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
