--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
     "saas": "^1.0.0",
+    "sass": "^1.80.6",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
